# S2APLER

./: .flake8  Dockerfile  README.md  pyproject.toml  requirements.in  setup.py
.github/workflows/: main.yml
data/: prod_model.pickle
s2apler/: __init__.py  consts.py  data.py  eval.py  featurizer.py  file_cache.py  model.py  plotting_utils.py  text.py
s2apler/timo/: cluster_seeds.json  clusters.json  config.yaml  integration_test.py  interface.py  papers.json
scripts/: README.md  analyze_final_data.ipynb  dump_pairwise_model.py  run_ci_locally.sh
tests/: test_cluster.py  test_cluster_incremental.py  test_data.py  test_eval.py  test_featurizer.py  test_text.py
tests/test_dataset/: cluster_seeds.json  clusters.json  papers.json
